fixed spacing on socials

--- a/style.css
+++ b/style.css
@@ -288,6 +288,7 @@ footer a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 2%;
 }
 
 .social {
